examples/errors/parsing/state-no-paren-args.cn
main : () [impure] =
  let p = New[int] 0;
  let u = Set[int] p, 5;
  ()
